-
Bug
-
Resolution: Done
-
P0: Blocker
-
None
-
5.12
-
None
-
All linux build
-
e3fa740d20b31270c09c258215f7d91d94da0cea
https://codereview.qt-project.org/#/c/224812/ Update submodules on 'dev' in qt5
https://testresults.qt.io/coin/integration/qt/qt5/tasks/1522784629
g++ -c -pipe -O2 -g -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -Wdate-time -D_REENTRANT -fPIC -DQT_WAYLAND_COMPOSITOR_QUICK -DQT_NO_NARROWING_CONVERSIONS_IN_CONNECT -DQT_BUILD_WAYLANDCOMPOSITOR_LIB -DQT_BUILDING_QT -DQT_NO_CAST_TO_ASCII -DQT_ASCII_CAST_WARNINGS -DQT_MOC_COMPAT -DQT_USE_QSTRINGBUILDER -DQT_DEPRECATED_WARNINGS -DQT_DISABLE_DEPRECATED_BEFORE=0x050000 -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_QUICK_LIB -DQT_GUI_LIB -DQT_QML_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../shared -Iglobal -Iwayland_wrapper -Icompositor_api -Iextensions -I../../include -I../../include/QtWaylandCompositor -I../../include/QtWaylandCompositor/5.12.0 -I../../include/QtWaylandCompositor/5.12.0/QtWaylandCompositor -I/home/qt/work/install/include/QtQuick/5.12.0 -I/home/qt/work/install/include/QtQuick/5.12.0/QtQuick -I/home/qt/work/install/include/QtGui/5.12.0 -I/home/qt/work/install/include/QtGui/5.12.0/QtGui -I/home/qt/work/install/include/QtQml/5.12.0 -I/home/qt/work/install/include/QtQml/5.12.0/QtQml -I/home/qt/work/install/include/QtCore/5.12.0 -I/home/qt/work/install/include/QtCore/5.12.0/QtCore -I/home/qt/work/install/include -I/home/qt/work/install/include/QtQuick -I/home/qt/work/install/include/QtGui -I/home/qt/work/install/include/QtQml -I/home/qt/work/install/include/QtNetwork -I/home/qt/work/install/include/QtCore -I.moc -isystem /usr/include/libdrm -I/home/qt/work/install/mkspecs/linux-g++ -o .obj/qwlhardwarelayerintegrationplugin.o hardware_integration/qwlhardwarelayerintegrationplugin.cpp qwaylandwindow.cpp: In static member function ‘static void QtWaylandClient::QWaylandWindow::frameCallback(void*, wl_callback*, uint32_t)’: qwaylandwindow.cpp:601:12: error: ‘class QWindowPrivate’ has no member named ‘deliverUpdateRequest’ w->deliverUpdateRequest(); ^ qwaylandwindow.cpp: In member function ‘void QtWaylandClient::QWaylandWindow::handleMouse(QtWaylandClient::QWaylandInputDevice*, const QtWaylandClient::QWaylandPointerEvent&)’: qwaylandwindow.cpp:820:122: warning: ‘static void QWindowSystemInterface::handleMouseEvent(QWindow*, ulong, const QPointF&, const QPointF&, Qt::MouseButtons, Qt::KeyboardModifiers, Qt::MouseEventSource) [with Delivery = QWindowSystemInterface::DefaultDelivery; ulong = long unsigned int; Qt::MouseButtons = QFlags<Qt::MouseButton>; Qt::KeyboardModifiers = QFlags<Qt::KeyboardModifier>]’ is deprecated [-Wdeprecated-declarations] QWindowSystemInterface::handleMouseEvent(window(), e.timestamp, e.local, e.global, e.buttons, e.modifiers); ^ In file included from qwaylandinputdevice_p.h:62:0, from qwaylandwindow.cpp:44: /home/qt/work/install/include/QtGui/5.12.0/QtGui/qpa/qwindowsysteminterface.h:85:31: note: declared here QT_DEPRECATED static void handleMouseEvent(QWindow *window, ulong timestamp, const QPointF &local, const QPointF &global, Qt::MouseButtons b, ^ qwaylandwindow.cpp: In member function ‘void QtWaylandClient::QWaylandWindow::handleMouseEventWithDecoration(QtWaylandClient::QWaylandInputDevice*, const QtWaylandClient::QWaylandPointerEvent&)’: qwaylandwindow.cpp:888:138: warning: ‘static void QWindowSystemInterface::handleMouseEvent(QWindow*, ulong, const QPointF&, const QPointF&, Qt::MouseButtons, Qt::KeyboardModifiers, Qt::MouseEventSource) [with Delivery = QWindowSystemInterface::DefaultDelivery; ulong = long unsigned int; Qt::MouseButtons = QFlags<Qt::MouseButton>; Qt::KeyboardModifiers = QFlags<Qt::KeyboardModifier>]’ is deprecated [-Wdeprecated-declarations] QWindowSystemInterface::handleMouseEvent(window(), e.timestamp, localTranslated, globalTranslated, e.buttons, e.modifiers); ^ In file included from qwaylandinputdevice_p.h:62:0, from qwaylandwindow.cpp:44: /home/qt/work/install/include/QtGui/5.12.0/QtGui/qpa/qwindowsysteminterface.h:85:31: note: declared here QT_DEPRECATED static void handleMouseEvent(QWindow *window, ulong timestamp, const QPointF &local, const QPointF &global, Qt::MouseButtons b, ^ Makefile:3772: recipe for target '.obj/qwaylandwindow.o' failed make[2]: *** [.obj/qwaylandwindow.o] Error 1 make[2]: *** Waiting for unfinished jobs....