Bring QWindowPrivate::deliverUpdateRequest() back temporarily

QtWayland is using that now.

This change partly reverts commit bff59f87ba11cac1dfa710f021522372de7a776f.

Task-number: QTBUG-67480
Change-Id: I36b75555baef220c80cf103226f5b8108d7a352c
Reviewed-by: Johan Helsing <johan.helsing@qt.io>